--- a/style.css
+++ b/style.css
@@ -833,128 +833,159 @@ footer span a:hover{
 
 
 /* responsive media query start */
-@media (max-width: 1104px) {
-    .about .about-content .left img{
-        height: 350px;
-        width: 350px;
+@media (max-width: 768px) {
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
     }
-}
 
-@media (max-width: 991px) {
-    .max-width{
-        padding: 0 50px;
+    .max-width {
+        padding: 0 20px;
+    }
+
+    section {
+        padding: 60px 0;
+    }
+
+    section .title {
+        font-size: 28px;
+        margin-bottom: 30px;
     }
 }
-@media (max-width: 947px){
-    .menu-btn{
-        display: block;
-        z-index: 999;
+@media (max-width: 768px) {
+    .navbar {
+        padding: 10px 0;
     }
-    .menu-btn i.active:before{
-        content: "\f00d";
-    }
-    .navbar .menu{
-        position: fixed;
-        height: 100vh;
+
+    .navbar .menu {
+        display: none;
+        flex-direction: column;
         width: 100%;
-        left: -100%;
-        top: 0;
-        background: #111;
-        text-align: center;
-        padding-top: 80px;
-        transition: all 0.3s ease;
-    }
-    .navbar .menu.active{
+        position: absolute;
+        top: 100%;
         left: 0;
+        background: crimson;
+        text-align: center;
+        padding: 10px 0;
     }
-    .navbar .menu li{
+
+    .navbar .menu.active {
+        display: flex;
+    }
+
+    .navbar .menu li {
+        display: block;
+        padding: 10px 0;
+    }
+
+    .menu-btn {
         display: block;
     }
-    .navbar .menu li a{
-        display: inline-block;
-        margin: 20px 0;
-        font-size: 25px;
-    }
-    .home .home-content .text-2{
-        font-size: 70px;
-    }
-    .home .home-content .text-3{
-        font-size: 35px;
-    }
-    .home .home-content a{
-        font-size: 23px;
-        padding: 10px 30px;
-    }
-    .max-width{
-        max-width: 930px;
-    }
-    .about .about-content .column{
-        width: 100%;
-    }
-    .about .about-content .left{
-        display: flex;
-        justify-content: center;
-        margin: 0 auto 60px;
-    }
-    .about .about-content .right{
-        flex: 100%;
-    }
-    .services .serv-content .card{
-        width: calc(50% - 10px);
-        margin-bottom: 20px;
-    }
-    .skills .skills-content .column,
-    .contact .contact-content .column{
-        width: 100%;
-        margin-bottom: 35px;
-    }
 }
+@media (max-width: 768px) {
+    .home {
+        text-align: center;
+        background-attachment: scroll;
+        height: auto;
+        padding: 60px 0;
+    }
 
-@media (max-width: 690px) {
-    .max-width{
-        padding: 0 23px;
+    .home .max-width {
+        flex-direction: column;
+        padding: 20px;
     }
-    .home .home-content .text-2{
-        font-size: 60px;
+
+    .home-content {
+        width: 100%;
     }
-    .home .home-content .text-3{
-        font-size: 32px;
-    }
-    .home .home-content a{
+
+    .home .home-content .text-1 {
         font-size: 20px;
     }
-    .services .serv-content .card{
+
+    .home .home-content .text-2 {
+        font-size: 50px;
+    }
+
+    .home .home-content .text-3 {
+        font-size: 30px;
+    }
+
+    .image-container {
         width: 100%;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .profile-img {
+        width: 200px;
+        height: 200px;
+    }
+}
+@media (max-width: 768px) {
+    .about .about-content {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .about .about-content .left {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .about .about-content .left img {
+        width: 250px;
+        height: 250px;
+    }
+
+    .about .about-content .right {
+        width: 100%;
+    }
+
+    .about .about-content .right p {
+        text-align: justify;
+    }
+}
+@media (max-width: 768px) {
+    .skills .skills-content,
+    .services .serv-content,
+    .contact .contact-content {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .skills .skills-content .column,
+    .services .serv-content .column,
+    .contact .contact-content .column {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+@media (max-width: 768px) {
+    .qualification__container {
+        height: auto;
+        padding: 20px;
+    }
+
+    .qualification__tabs {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .qualification__button {
+        width: 100%;
+        padding: 8px;
+        font-size: 16px;
     }
 }
 
-@media (max-width: 500px) {
-    .home .home-content .text-2{
-        font-size: 50px;
-    }
-    .home .home-content .text-3{
-        font-size: 27px;
-    }
-    .about .about-content .right .text,
-    .skills .skills-content .left .text{
-        font-size: 19px;
-    }
-    .contact .right form .fields{
-        flex-direction: column;
-    }
-    .contact .right form .name,
-    .contact .right form .email{
-        margin: 0;
-    }
-    .right form .error-box{
-       width: 150px;
-    }
-    .scroll-up-btn{
-        right: 15px;
-        bottom: 15px;
-        height: 38px;
-        width: 35px;
-        font-size: 23px;
-        line-height: 38px;
+@media (max-width: 768px) {
+    footer {
+        text-align: center;
+        padding: 20px;
     }
 }
+
+
+
